[gd_scene load_steps=4 format=3 uid="uid://c4m2k4ioabbcr"]

[ext_resource type="Script" uid="uid://demkwy2c8a5kw" path="res://scripts/slow_girl.gd" id="1_6lfvi"]
[ext_resource type="Texture2D" uid="uid://edfx2hl7rliu" path="res://sprites/slowgirl.png" id="1_ldtdh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lfvi"]
size = Vector2(7, 16)

[node name="SlowGirl" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_6lfvi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_6lfvi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ldtdh")

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_6lfvi")

[node name="JohnCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="JohnCooldown" to="." method="_on_john_cooldown_timeout"]
